FIX - alert width on mobiles

--- a/other/minify/index.css
+++ b/other/minify/index.css
@@ -359,6 +359,7 @@ button.cat {
         width      : calc(100% - 20px);
         max-width  : calc(100% - 20px);
         box-sizing : border-box;
+        z-index    : 100;
     }
 }
 
